# FundAlg2

./: README.md
Lab1/Array/include/: array.hpp  container.hpp
Lab1/MyArray/: CMakeLists.txt
Lab1/MyArray/include/: array.hpp  container.hpp
Lab1/MyArray/tests/: testarr.cpp
Lab1/MyUniquePTR/include/: unique_ptr.hpp
Lab1/MyVector/: CMakeLists.txt
Lab1/MyVector/include/: vector.hpp
Lab2/BigInt1/: CMakeLists.txt
Lab2/BigInt1/include/: bigint.hpp
Lab2/BigInt1/src/: bigint.cpp
Lab2/BigInt2/: CMakeLists.txt
Lab2/BigInt2/include/: bigint.hpp
Lab2/BigInt2/src/: bigint.cpp
